# boatregister-api

./: README.md  boatregister-api.yaml  lambda_function.py  pyproject.toml
.github/workflows/: main.yaml  main.yml
boatregister_api/: anthropic.py  builders.py  credentials.py  emails.py  gemini.py  geonames.py  get_upload_credentials.py  golds3.py  google.py  lambda_function.py  locate.py  mail.py  places.py  shuffle.py  summarise.py  summarise_with_openai.py  tables.py  updates.py
tests/: test_lambda.py
